--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,14 @@ spring.datasource.password=wl
 #wx.configs.appSecret=77fb7b51d8d27b72d00973eb66d427ec
 #wx.configs.aesKey=ATM7RfnKxHb0m53WVHoIVxPOgo3NkXC3hBhkgqLijMT
 #货检系统微信公众号配置
-wx.configs.appId=wx7cf66957cc98c73a
+#wx.configs.appId=wx7cf66957cc98c73a
+#wx.configs.token=cdha
+#wx.configs.appSecret=da010766e1f700304ffb02960c1e78cc
+#wx.configs.aesKey=H04EC4eTsmmrzMDgs6aRCNSQ2jW7c7xWF0iI8uPCaBm
+#智慧物流---微信公众号配置
+wx.configs.appId=wx771a2b307eea4499
 wx.configs.token=cdha
-wx.configs.appSecret=da010766e1f700304ffb02960c1e78cc
+wx.configs.appSecret=b0af3c09feca0f0be6679047f50cc33b
 wx.configs.aesKey=H04EC4eTsmmrzMDgs6aRCNSQ2jW7c7xWF0iI8uPCaBm
 
 baidual.configs.appID=15600153
@@ -24,7 +29,8 @@ duanxin.configs.apiurl=https://sms.zhenzikj.com
 
 #部署IP地址
 #baseurl.configs.mUrl=http://hyzxt.cross.echosite.cn/wechat/hjxt/
-baseurl.configs.mUrl=http://cdhahjxt.easy.echosite.cn/wechat/hjxt/
+#baseurl.configs.mUrl=http://cdhahjxt.easy.echosite.cn/wechat/hjxt/
+baseurl.configs.mUrl=http://cdhawxgzhx.easy.echosite.cn/wechat/rlpiss/
 
 
 #多式联运访问 ---- IP地址
@@ -199,7 +205,7 @@ logging.config=classpath:slf4j2.xml
 server.port=80
 #微信公众号货检系统
 #server.port=443
-server.servlet.context-path=/wechat/hjxt
+server.servlet.context-path=/wechat/rlpiss
 mybatis.mapperLocations=classpath:mapper/*.xml
 #session存储类型
 spring.session.store-type=none
